# Cardinal-Identity-Server

./: .gitignore  Cargo.toml  README.md  Rocket.toml
docs/: application_signature.txt
migrations/00000000000000_diesel_initial_setup/: .up.sql.swp  down.sql  up.sql
src/: main.rs
src/cli/: account.rs  application.rs  client.rs  export.rs  import.rs  init.rs  mod.rs  scope.rs  sign.rs  user.rs
src/database/: .schema.rs.swp  mod.rs  schema.rs
src/encryption/: byte_encryption.rs  exchange_key.rs  mod.rs  signing_key.rs
src/error/: mod.rs
src/model/: account.rs  application.rs  certificate.rs  client.rs  mod.rs  read_authorization.rs  read_scope.rs  scope.rs  write_authorization.rs  write_scope.rs
src/models/: account.rs
src/web/: mod.rs
src/web/admin/: mod.rs  view.rs
src/web/api/: mod.rs
src/web/css/: styles.css
templates/: base.html.tera  base.tera  home.html.tera  home.tera  join.tera  login.tera
tests/: cli.rs  test.rs
tests/cli/: account.rs  application.rs  client.rs  mod.rs
