[package]
name = "idvault"
version = "0.1.0"
authors = ["Daniel Wigton <daniel@stonecottageweb.com>"]

[dependencies]
chrono = { version = "0.4.9", features = ["serde"] }
diesel = { version = "1.4.3", features = ["postgres", "chrono"] }
r2d2-diesel = "1.0.0"
r2d2 = "0.8.6"
dotenv = "0.15"
rocket = "0.4.2"
rocket_contrib = { version = "0.4.2", features = ["json", "tera_templates", "serve"] }
rocket_codegen = "0.4.2"
serde = "1.0.102"
serde_json = "1.0.41"
serde_derive = "1.0.102"
ed25519-dalek = "1.0.0-pre.2"
x25519-dalek = "0.5.2"
rand = "0.6.0"
miscreant = "0.4.2"
base64 = "0.11"
byteorder = "1.3.2"
argon2rs = "0.2.5"
sha2 = "0.8.0"
clap = "2.33.0"
rpassword = "4.0.1"
serde_cbor = "0.11.1"
clear_on_drop = "0.2.3"
