[package]
edition = "2018"
name = "idvault"
version = "0.1.0"
authors = ["Daniel Wigton <daniel@stonecottageweb.com>"]

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.5", features = ["postgres", "chrono", "r2d2"] }
diesel_migrations = "1.4.0"
r2d2-diesel = "1.0.0"
r2d2 = "0.8.9"
dotenv = "0.15"
rocket = { version = "0.5.0-rc.1", features = ["secrets", "tls"]}
rocket_dyn_templates = { version = "0.1.0-rc.1", features = ["tera"] }
rocket_sync_db_pools = { version = "0.1.0-rc.1", features = ["diesel_postgres_pool"] }
serde = "1.0.117"
serde_json = "1.0.64"
serde_derive = "1.0.117"
ed25519-compact = "0.1.9"
x25519-dalek = "1.1.0"
rand = "0.7.3"
base64 = "0.13.0"
byteorder = "1.3.4"
argon2rs = "0.2.5"
sha2 = "0.9.2"
clap = "2.33.3"
rpassword = "5.0.0"
serde_cbor = "0.11.1"
clear_on_drop = "0.2.4"
anyhow = "1.0.34"
static-files = "0.2.3"

[dev-dependencies]
assert_cmd = "1.0.2"
predicates = "1.0.5"
